:hammer: Packaging ipynb  into imports

--- a/ipynb/OT-for-kyle-activism.ipynb
+++ b/ipynb/OT-for-kyle-activism.ipynb
@@ -18,8 +18,7 @@
     "import numpy as np\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
-    "import scipy as scp\n",
-    "import pylab as pyl\n",
+    "from ot_for_kyle_activism import sinkhorn as sinkhorn\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -30,139 +29,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Definition of the parameters"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def solve_sinkhorn(M, N, m, epsilon, params, debug=False):\n",
-    "    # Define grids for variables y,z,xi\n",
-    "    grid_y  = np.linspace(-m,m,N)\n",
-    "    grid_z  = np.linspace(-m,m,N)\n",
-    "    grid_xi = np.linspace(0,1,M)\n",
-    "    [Y,Z,Xi] = np.meshgrid(grid_y,grid_z,grid_xi)\n",
-    "    dimensions = (N, N, M) \n",
-    "    \n",
-    "    # Increments\n",
-    "    dy  = 2*m/N\n",
-    "    dz  = dy\n",
-    "    dxi = 1.0/M\n",
-    "\n",
-    "    # Copy hyperparameters\n",
-    "    sigma = params['sigma']\n",
-    "    T     = params['T']\n",
-    "    sigma_beta = params['sigma_beta']\n",
-    "    m_beta     = params['m_beta']\n",
-    "    delta      = params['delta']\n",
-    "    x_star     = params['x_star']\n",
-    "    \n",
-    "    # Target measures\n",
-    "    # - Law of Y\n",
-    "    v_eff = sigma*sigma*T + sigma_beta*sigma_beta\n",
-    "    a = dy*np.exp( -0.5*grid_y*grid_y/v_eff)/np.sqrt(2*np.pi*v_eff)\n",
-    "    # - Law of (Z-beta, Xi)\n",
-    "    v_eff = sigma*sigma*T + sigma_beta*sigma_beta\n",
-    "    b = dz*np.exp( -m_beta*grid_y - 0.5*grid_y*grid_y/v_eff)/np.sqrt(2*np.pi*v_eff)\n",
-    "    [b1, b2] = np.meshgrid(b, dxi* np.ones_like(grid_xi))\n",
-    "    b = b1*b2 # Product measure\n",
-    "    b = b.T   # For some reason, dim order is correct this way\n",
-    "    a = a/np.sum(a)\n",
-    "    b = b/np.sum(b)\n",
-    "    if debug:\n",
-    "        print( \"Grid for measure a:\", a.shape )\n",
-    "        print( \"Grid for measure b:\", b.shape )\n",
-    "\n",
-    "    # Kernel\n",
-    "    surplus = (Y-Z)*Xi + delta*np.fmax(Y-Z-x_star, 0)\n",
-    "    K1 = np.exp( surplus/epsilon )\n",
-    "    if debug:\n",
-    "        print( \"Grid for kernel:\", K1.shape )\n",
-    "\n",
-    "    #\n",
-    "    # Launch Sinkhorn\n",
-    "    v = np.ones_like(b)\n",
-    "    K  = lambda x : np.tensordot( K1, x, axes=[[1,2], [0,1]])\n",
-    "    KT = lambda x : np.tensordot( K1, x, axes=[[0], [0]])\n",
-    "\n",
-    "    count = 1000\n",
-    "    errors = []\n",
-    "    for i in range(count):\n",
-    "        u = a / K(v)\n",
-    "        v = b / KT(u)\n",
-    "        e = np.linalg.norm( u[None,:]*K(v) - a )\n",
-    "        errors.append( e )\n",
-    "    #\n",
-    "    # Plot\n",
-    "    errors_sinkhorn = errors\n",
-    "    plt.yscale('log')\n",
-    "    plt.plot(errors)\n",
-    "    plt.ylabel('Error in log-scale')\n",
-    "    plt.xlabel('Number of iterations')\n",
-    "    #\n",
-    "    return u, K1, v\n",
-    "\n",
-    "def plot_level_set(plan, M, N, m):\n",
-    "    print(\"Total mass: \", np.sum(plan))\n",
-    "    # Define grids for variables y,z,xi\n",
-    "    grid_y  = np.linspace(-m,m,N)\n",
-    "    grid_z  = np.linspace(-m,m,N)\n",
-    "    grid_xi = np.linspace(0,1,M)\n",
-    "    # Set colors\n",
-    "    plt.figure(figsize=(10, 8), dpi=80)\n",
-    "    cmap = plt.get_cmap('viridis',N)\n",
-    "    norm = matplotlib.colors.Normalize(vmin=0,vmax=1)\n",
-    "    sm = plt.cm.ScalarMappable(cmap=cmap, norm=norm)\n",
-    "    sm.set_array([])\n",
-    "    #\n",
-    "    xi_old  = np.zeros_like( grid_z )\n",
-    "    for i in range(N):\n",
-    "        # Slice for fixed y\n",
-    "        # Note: Slice = Conditionnal distribution (Z,Xi | Y)\n",
-    "        plan_slice = plan[i,:,:]\n",
-    "        plan_slice = plan_slice/np.sum(plan_slice)\n",
-    "        # Compute mean of Xi conditionally to Z\n",
-    "        xi = np.dot( plan_slice, grid_xi )/np.sum(plan_slice, axis=1)\n",
-    "        plt.fill_between(x=grid_z, y1=xi_old, y2=xi, color=cmap( norm(i/N) ) )\n",
-    "        xi_old = xi\n",
-    "    plt.xlabel('Z axis')\n",
-    "    plt.ylabel('Xi axis')\n",
-    "    plt.colorbar(sm, ticks=np.linspace(-3,3,21), \n",
-    "                 boundaries=np.arange(-3,3,0.1))\n",
-    "    plt.show()\n",
-    "\n",
-    "def plot_level_set2(plan, M, N, m):\n",
-    "    print(\"Total mass: \", np.sum(plan))\n",
-    "    # Define grids for variables y,z,xi\n",
-    "    grid_y  = np.linspace(-m,m,N)\n",
-    "    grid_z  = np.linspace(-m,m,N)\n",
-    "    grid_xi = np.linspace(0,1,M)\n",
-    "    # Set colors\n",
-    "    plt.figure(figsize=(10, 8), dpi=80)\n",
-    "    cmap = plt.get_cmap('viridis',N)\n",
-    "    norm = matplotlib.colors.Normalize(vmin=0,vmax=1)\n",
-    "    sm = plt.cm.ScalarMappable(cmap=cmap, norm=norm)\n",
-    "    sm.set_array([])\n",
-    "    #\n",
-    "    xi_old  = np.zeros_like( grid_z )\n",
-    "    for i in range(N):\n",
-    "        # Slice for fixed y\n",
-    "        # Note: Slice = Conditionnal distribution (Z,Xi | Y)\n",
-    "        plan_slice = plan[i,:,:]\n",
-    "        plan_slice = plan_slice/np.sum(plan_slice)\n",
-    "        # Compute mean of Xi conditionally to Z\n",
-    "        z = grid_z\n",
-    "        xi = np.dot( plan_slice, grid_xi )/np.sum(plan_slice, axis=1)\n",
-    "        plt.plot( grid_z, xi )\n",
-    "    plt.xlabel('Z axis')\n",
-    "    plt.ylabel('Xi axis')\n",
-    "    plt.show()"
+    "import ot_for_kyle_activism.core.sinkhorn as kyle"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Definition of the parameters"
    ]
   },
   {
@@ -190,7 +69,7 @@
     "epsilon = 0.05\n",
     "\n",
     "# Solve Sinkhorn\n",
-    "potential_a, K1, potential_b = solve_sinkhorn(M,N,m,epsilon=epsilon, params=hyperparameters)\n",
+    "potential_a, K1, potential_b = kyle.solve_sinkhorn(M,N,m,epsilon=epsilon, params=hyperparameters)\n",
     "# Form transport plan\n",
     "plan = potential_a[:, None, None]*K1*potential_b[None, :, :]"
    ]
@@ -203,30 +82,8 @@
    },
    "outputs": [],
    "source": [
-    "plot_level_set(plan, M, N, m)\n",
-    "plot_level_set2(plan, M, N, m)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compute_I(plan, M, N, m, debug=False):\n",
-    "    if debug:\n",
-    "        print(\"Total mass: \", np.sum(plan))\n",
-    "    # Define grids for variables y,z,xi\n",
-    "    grid_y  = np.linspace(-m,m,N)\n",
-    "    grid_z  = np.linspace(-m,m,N)\n",
-    "    grid_xi = np.linspace(0,1,M)\n",
-    "\n",
-    "    # Height is conditional mean Y | (Z,Xi)\n",
-    "    conditional_mass = np.tensordot( np.ones_like(grid_y), plan, axes=[ [0], [0]] )\n",
-    "    height = plan/conditional_mass[None, :,:]\n",
-    "    height = np.tensordot( grid_y, height, axes=[ [0], [0]] )\n",
-    "    \n",
-    "    return grid_z, grid_xi, height.T"
+    "kyle.plot_level_set(plan, M, N, m)\n",
+    "kyle.plot_level_set2(plan, M, N, m)"
    ]
   },
   {
@@ -243,7 +100,7 @@
    "outputs": [],
    "source": [
     "# Solve Sinkhorn\n",
-    "potential_a, K1, potential_b = solve_sinkhorn(M,N,m,epsilon=epsilon, params=hyperparameters)\n",
+    "potential_a, K1, potential_b = kyle.solve_sinkhorn(M,N,m,epsilon=epsilon, params=hyperparameters)\n",
     "# Form transport plan\n",
     "plan = potential_a[:, None, None]*K1*potential_b[None, :, :]"
    ]
@@ -327,11 +184,11 @@
     "    params=dict(hyperparameters)\n",
     "    params['m_beta'] = param\n",
     "    # Solve Sinkhorn\n",
-    "    potential_a, K1, potential_b = solve_sinkhorn(M,N,m,epsilon=epsilon, params=params)\n",
+    "    potential_a, K1, potential_b = kyle.solve_sinkhorn(M,N,m,epsilon=epsilon, params=params)\n",
     "    # Form transport plan\n",
     "    plan = potential_a[:, None, None]*K1*potential_b[None, :, :]\n",
     "    # Compute I\n",
-    "    grid_z, grid_y, height = compute_I( plan, M, N, m)\n",
+    "    grid_z, grid_y, height = kyle.compute_I( plan, M, N, m)\n",
     "    Is.append( height )\n",
     "\n",
     "\n",
@@ -367,6 +224,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def compute_governance_probabilities( M, N, m, epsilon, hyperparameters, sigma_array):\n",
+    "    probabilities = []\n",
+    "    for param in sigma_array:\n",
+    "        params=dict(hyperparameters)\n",
+    "        params['sigma'] = param\n",
+    "        # Solve Sinkhorn\n",
+    "        potential_a, K1, potential_b = kyle.solve_sinkhorn(M,N,m,epsilon=epsilon, params=params)\n",
+    "        # Form transport plan\n",
+    "        plan = potential_a[:, None, None]*K1*potential_b[None, :, :]\n",
+    "        # Define grids for variables y,z,xi\n",
+    "        grid_y  = np.linspace(-m,m,N)\n",
+    "        grid_z  = np.linspace(-m,m,N)\n",
+    "        grid_xi = np.linspace(0,1,M)\n",
+    "        # Normalize for safety\n",
+    "        plan = plan/np.sum(plan)\n",
+    "        # Law of (Y,Z)\n",
+    "        law_YZ = np.sum( plan, axis=2 )\n",
+    "        #\n",
+    "        y, z = np.meshgrid( grid_y, grid_z )\n",
+    "        indices = np.where( y-z>hyperparameters['x_star'])\n",
+    "        p = np.sum( law_YZ[indices])\n",
+    "        probabilities.append( p )\n",
+    "    # End for\n",
+    "    return probabilities\n",
+    "\n",
     "# Hyperparameters\n",
     "hyperparameters = {\n",
     "    'sigma'     : 1.0,\n",
@@ -386,28 +268,16 @@
     "# Sinkorn regularization parameter\n",
     "epsilon = 0.05\n",
     "\n",
-    "# Loop over hyperparameters\n",
-    "probabilities = []\n",
-    "for param in np.linspace( 0.1, 2, 20):\n",
-    "    params=dict(hyperparameters)\n",
-    "    params['sigma'] = param\n",
-    "    # Solve Sinkhorn\n",
-    "    potential_a, K1, potential_b = solve_sinkhorn(M,N,m,epsilon=epsilon, params=params)\n",
-    "    # Form transport plan\n",
-    "    plan = potential_a[:, None, None]*K1*potential_b[None, :, :]\n",
-    "    # Define grids for variables y,z,xi\n",
-    "    grid_y  = np.linspace(-m,m,N)\n",
-    "    grid_z  = np.linspace(-m,m,N)\n",
-    "    grid_xi = np.linspace(0,1,M)\n",
-    "    # Normalize for safety\n",
-    "    plan = plan/np.sum(plan)\n",
-    "    # Law of (Y,Z)\n",
-    "    law_YZ = np.sum( plan, axis=2 )\n",
-    "    #\n",
-    "    y, z = np.meshgrid( grid_y, grid_z )\n",
-    "    indices = np.where( y-z>hyperparameters['x_star'])\n",
-    "    p = np.sum( law_YZ[indices])\n",
-    "    probabilities.append( p )"
+    "sigma_array=np.linspace(0.1, 2.0, 20)\n",
+    "\n",
+    "#\n",
+    "hyperparameters['m_beta'] = -1.0\n",
+    "probabilities1 = compute_governance_probabilities( M, N, m, epsilon, hyperparameters, sigma_array)\n",
+    "plt.show()\n",
+    "hyperparameters['m_beta'] = 1.0\n",
+    "probabilities2 = compute_governance_probabilities( M, N, m, epsilon, hyperparameters, sigma_array)\n",
+    "plt.show()\n",
+    "\n"
    ]
   },
   {
@@ -418,10 +288,13 @@
    "source": [
     "# Plot\n",
     "plt.figure(figsize=(10, 8), dpi=80)\n",
-    "plt.plot( np.linspace( 0, 1, 20), probabilities )\n",
-    "plt.title( '$\\mathbb{P}( Y-Z \\geq x^*)$ as a function of $\\sigma$.')\n",
-    "plt.xlabel('$\\sigma$')\n",
-    "plt.ylabel('probability')\n",
+    "matplotlib.rcParams.update({'font.size': 15})\n",
+    "plt.plot( sigma_array, probabilities1, label='$m_\\\\beta$=1.0' )\n",
+    "plt.plot( sigma_array, probabilities2, label='$m_\\\\beta$=1.0' )\n",
+    "plt.legend()\n",
+    "plt.title( 'Probability $\\mathbb{P}( Y_T-(Z_T-\\\\beta) \\geq x^*)$ as a function of $\\sigma$.')\n",
+    "plt.xlabel('$\\\\sigma$')\n",
+    "plt.ylabel('$\\\\mathbb{P}( Y_T-(Z_T-\\\\beta) \\geq x^*)$')\n",
     "plt.ylim( [0,1] )\n",
     "plt.savefig('proba.png')\n",
     "plt.show()"
@@ -436,10 +309,13 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "40d679bba796af1ef241e9f633fdd5227cd0cd3ae12e2c6da08a07d80ab3c166"
+  },
   "kernelspec": {
-   "display_name": "ot_for_kyle",
+   "display_name": ".venv_ot_for_kyle",
    "language": "python",
-   "name": "ot_for_kyle"
+   "name": ".venv_ot_for_kyle"
   },
   "language_info": {
    "codemirror_mode": {
