--- a/ipynb/OT-for-kyle-activism.ipynb
+++ b/ipynb/OT-for-kyle-activism.ipynb
@@ -18,7 +18,6 @@
     "import numpy as np\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
-    "from ot_for_kyle_activism import sinkhorn as sinkhorn\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -289,8 +288,8 @@
     "# Plot\n",
     "plt.figure(figsize=(10, 8), dpi=80)\n",
     "matplotlib.rcParams.update({'font.size': 15})\n",
-    "plt.plot( sigma_array, probabilities1, label='$m_\\\\beta$=1.0' )\n",
-    "plt.plot( sigma_array, probabilities2, label='$m_\\\\beta$=1.0' )\n",
+    "plt.plot( sigma_array, probabilities1, label='$m_\\\\beta$=-1.0' )\n",
+    "plt.plot( sigma_array, probabilities2, label='$m_\\\\beta$=+1.0' )\n",
     "plt.legend()\n",
     "plt.title( 'Probability $\\mathbb{P}( Y_T-(Z_T-\\\\beta) \\geq x^*)$ as a function of $\\sigma$.')\n",
     "plt.xlabel('$\\\\sigma$')\n",
@@ -299,6 +298,13 @@
     "plt.savefig('proba.png')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
